--- a/Home.html
+++ b/Home.html
@@ -1,5 +1,44 @@
+<!DOCTYPE html>
 <html>
-    <Title>
-        Home
-    </Title>
+
+<head>
+	<title>Cool-School</title>
+	<script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-app.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-firestore.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/live/3.1/firebase.js"></script>
+
+	<link href="https://fonts.googleapis.com/css?family=Yeon+Sung&display=swap" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+
+	<link rel="stylesheet" type="text/css" href="Home.css">
+
+</head>
+
+<body onload="update()">
+	<div class="container">
+		<button id="logout" class="glyphicon glyphicon-log-out btn btn-danger" onclick="out()">Logout</button>
+		<center>
+			<h1 class="header">
+                Cool-School
+			</h1>
+			<h3 class="color_white" id = "Name">Hi</h3>
+			<div class="form-group input_div_room_page">
+				<label id = "blue">@Add Cool Room:</label>
+				<input id="Roomname" class="form-control" placeholder="Enter Room Name Here" type="text">
+
+			</div>
+			<button class="btn btn-success" onclick="addroom()">#Add Room</button>
+			<h3 id="blue">@TRENDING COOL ROOMS</h3>
+			<Div id="output"></Div>
+
+		</center>
+	</div>
+	<script src="Home.js"></script>
+</body>
+
 </html>
