--- a/Home.html
+++ b/Home.html
@@ -19,20 +19,20 @@
 
 </head>
 
-<body onload="update()">
+<body>
 	<div class="container">
 		<button id="logout" class="glyphicon glyphicon-log-out btn btn-danger" onclick="out()">Logout</button>
 		<center>
 			<h1 class="header">
-                Cool-School
+				Cool-School
 			</h1>
-			<h3 class="color_white" id = "Name">Hi</h3>
+			<h3 class="color_white" id="Name">Welcome</h3>
 			<div class="form-group input_div_room_page">
-				<label id = "blue">@Add Cool Room:</label>
+				<label id="blue">@Add Cool Room:</label>
 				<input id="Roomname" class="form-control" placeholder="Enter Room Name Here" type="text">
 
 			</div>
-			<button class="btn btn-success" onclick="addroom()">#Add Room</button>
+			<button class="btn btn-success" onclick="Add()">#Add Room</button>
 			<h3 id="blue">@TRENDING COOL ROOMS</h3>
 			<Div id="output"></Div>
 
