--- a/Chat.html
+++ b/Chat.html
@@ -7,23 +7,33 @@
     <script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/live/3.1/firebase.js"></script>
-
-    <link href="https://fonts.googleapis.com/css?family=Yeon+Sung&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,100&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="Chat.css">
     <script src="Chat.js"></script>
 </Head>
 
-<Body>
-    <H1>
-
-    </H1>
+<Body onload="Set()">
+    <button id="logout" class="glyphicon glyphicon-log-out btn btn-danger" onclick="out()">Logout</button>
+    <br>
+    <br>
+    <Center>
+        <H1 id="Room-Name"></H1>
+        <H2 Id="User-Name"></H2>
+        <div id = "Chatting"></div>
+    <div id = "input">
+    <input type="text" id="word" placeholder="@ Enter Your message here !">
+    <button id = "send" onclick="go()"type="button">Send my message</button>
+    </div>
+    </Center>
 </Body>
 
 </html>
